# AgenticPCG

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  render_per_tool_call_edit.py  render_simulation.py  render_trajectory.py  run_experiment.py  run_sweep.py
configs/: binarydoor.yaml  default.yaml  loderunner.yaml  smb.yaml  sokoban.yaml  sweep.yaml  zelda.yaml
docs/: adding_a_new_game.md  cli_reference.md  configuration.md  visualization.md
toolusepcg/: __init__.py  config.py  edit_manager.py  evaluator.py  factory.py  level.py  resume.py
toolusepcg/logging/: __init__.py  trace.py
toolusepcg/optimizer/: __init__.py  greedy.py  scoring.py  termination.py
toolusepcg/protocol/: __init__.py  json_schema.py  repair.py
toolusepcg/skill_growth/: __init__.py  propose.py
toolusepcg/tools/: __init__.py  edit_place_line.py  edit_place_patch.py  edit_place_single.py  edit_place_tile.py  edit_place_wall.py  eval_stats.py  generate_binary.py  generate_zelda.py  generate_zelda_wall.py  registry.py
